tests/miniJava/neg/004445_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( class java { } java ) { return 0 ; } }
